--- a/PHP/composer.json
+++ b/PHP/composer.json
@@ -8,10 +8,10 @@
         }
     ],
     "require": {
-        "php": "<7.0"
+        "php": "7.4.*"
     },
     "require-dev": {
-        "phpunit/phpunit": "4.8"
+        "phpunit/phpunit": "8.*"
     },
     "autoload": {
         "psr-4": {
